# python-roadmap

./: .gitignore  Generator Expressions.py  List Comprehensions.py  Static Typing Basics.py  package_managers_and_venv.py  programing_paradigms.py  pyproject.toml  test_zone.py
Common Packages/: package_dataclasses.py  package_dotenv.py  package_numpy.py  package_pathlib.py  package_requests.py  requirements.txt
Concurrency/: 1_concurrencies_comparission.py  asynchrony_execution.py  multiprocessing_comparison.py  multiprocessing_execution.py  multiprocessing_w_concurrent_features.py  multithreading_execution.py  normal_synch_execution.py  python_GIL.py
Context Managers/: OpenFile.py  guinea_pig_text_file.txt  main.py
Data Structures and Algorithims/: array_ds.py  hashtable_ds.py  linked_list_ds.py  queue_ds.py  recursion_ds.py  stack_ds.py  tree_ds.py
Fast API/: main.py  requirements.txt
Files Handling/: main.py
Functional and Pattern Tools/: Lambda.py
Functional and Pattern Tools/Modules/: module_2.py
Functional and Pattern Tools/decorators/: decorators.py  multiple_decorators.py
Functional and Pattern Tools/iterators/: concept.py
Functional and Pattern Tools/regular_expressions/: basic_regex.py
Learn the Basics/Basic Syntax/: basic_syntax.py
Learn the Basics/Variables and Data Types/: booleans.py  casting_variables.py  exceptions.py  functions.py  operators.py  set_tuples_lists_arrays_dict.py  strings.py  variables_and_data_types.py
Modules/: main.py  module_1.py  notes.txt
Modules/module_3/: module_3.py
Unit Testing/: Employee.py  test_Employee.py
common_packages/: package_asyncio.py  package_dotenv.py  package_pandas.py  package_requests.py  requirements.txt
functional_and_pattern_tools/: decorators.py
(+25 files in other folders)
